# aind-smartspim-stitch

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  tag.yml
code/: main.py  run  run_capsule.py  run_terastitcher  run_terastitcher_capsule.py
code/aind_smartspim_stitch/: __init__.py  bigstitcher.py  bigstitcher_co_pipeline.py  default_config.yaml  params.py  path_parser.py  smartspim_bigstitcher_utility.py  stitch.py  terastitcher.py  validate_datasets.py
code/aind_smartspim_stitch/_shared/: types.py
code/aind_smartspim_stitch/bigstitcher_spark_scripts/: run_classes.sh
code/aind_smartspim_stitch/params/: __init__.py  default_terastitcher_config.yaml  params.py
code/aind_smartspim_stitch/utils/: utils.py
code/aind_smartspim_stitch/zarr_converter/: __init__.py  zarr_converter.py  zarr_converter_params.py
code/scripts/: terastitcher_parallel.bat  terastitcher_parallel.sh  tiff_to_omezarr.py
code/src/: config_real_data.json  config_toy_dataset.json  params.py  path_parser.py  terastitcher.py  terastitcher_config.json  tiff_to_omezarr.py
code/src/ng_link/: __init__.py  ng_layer.py  ng_state.py
code/src/nglink/: __init__.py  ng_layer.py  ng_state.py
code/src/terastitcher_module/: __init__.py  default_config.yaml  params.py  path_parser.py  terastitcher.py
code/src/terastitcher_module/utils/: __init__.py  utils.py
code/src/terastitcher_module/zarr_converter/: zarr_converter.py
code/src/utils/: utils.py
code/src/zarr_converter/: __init__.py  zarr_converter.py  zarr_converter_params.py
code/tests/: __init__.py  params.py  test_terastitcher.py  test_utils.py  test_zarr_converter.py
doc_template/: requirements.txt
doc_template/source/: aind_smartspim_stitch.rst  aind_smartspim_stitch.utils.rst  aind_smartspim_stitch.zarr_converter.rst  conf.py  index.rst  modules.rst  tests.rst
environment/: Dockerfile  Dockerfile_local  OldDockerfile  README.md  TerastitcherDockerfile  installing_terastitcher_ubuntu18.04.sh  postInstall  terastitcher_openmpi_setup.sh
environment/CodeOcean/: Dockerfile  installing_terastitcher.sh  terastitcher_java_setup.sh  terastitcher_openmpi_setup.sh
environment/GCloud/: Dockerfile  config_gcloud_run.sh  pystripe_installer.sh  terastitcher_installer.sh  terastitcher_java_setup.sh  terastitcher_openmpi_setup.sh
metadata/: metadata.yml
