[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_smartspim_stitch"
description = "Striping and stitching module for 3D teravoxel-sized microscopy images"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "David Feng", email="david.feng@alleninstitute.org"},
    {name = "Sharmishtaa Seshamani", email="sharmishtaas@alleninstitute.org"},
    {name = "Camilo Laiton", email="camilo.laiton@alleninstitute.org"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
    'pandas',
    'sphinx',
    'tifffile < 2022.4.22',
    'xarray_multiscale==1.1.0',
    'argschema==3.0.4',
    'mpi4py',
    'bokeh==2.4.2',
    'pint==0.20.1',
    'dask[distributed]==2022.11.1',
    'aind-ng-link@git+https://github.com/AllenNeuralDynamics/aind-ng-link.git',
    'pystripe@git+https://github.com/AllenNeuralDynamics/pystripe.git@feature/output_format',
    'ome-zarr@git+https://github.com/AllenNeuralDynamics/ome-zarr-py.git@feature/delayed-dask-poc',
    'aicsimageio@git+https://github.com/camilolaiton/aicsimageio.git@feature/zarrwriter-multiscales-daskjobs',
    'aind-data-schema==0.12.5',
    'xmltodict==0.13.0',
    'natsort==8.2.0',
    'pims==0.6.1'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'pygit2',
    'parameterized',
    'furo'
]

[project.urls]
homepage = "https://github.com/AllenNeuralDynamics/aind-smartspim-stitch"
documentation = "https://github.com/AllenNeuralDynamics/aind-smartspim-stitch"
repository = "https://github.com/AllenNeuralDynamics/aind-smartspim-stitch"

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_smartspim_stitch.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 105
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_smartspim_stitch", "utils", "zarr_converter", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 105

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
